--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+	<link rel="preconnect" href="https://fonts.gstatic.com"> 
+	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>My Project</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+
+  	<time id="time">12:17:04 PM</time>
+  	<h1>
+  		<span id="greeting">Good Afternoon</span>
+  		<span id="name" contenteditable="true">Romal</span>
+  	</h1>
+
+  	<h2>What is your focus?</h2>
+  	<h2 id="focus" contenteditable="true">Make cool projects</h2>
+
+    
+
     <script src="script.js"></script>
   </body>
 </html>
